fix: settings wrap

--- a/src/pages/Settings/index.module.scss
+++ b/src/pages/Settings/index.module.scss
@@ -93,6 +93,7 @@
 
     &--FlexRow {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         gap: 0.75rem;
         padding: 0.5rem 0;
